# book-convert

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/book_convert/: __init__.py  convert.py
src/book_converter/: cli.py
src/book_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_convert.py
