[metadata]
name = book-converter
version = 0.1.0
description = Convert PDF books to Markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pdfminer.six
    pymupdf

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    book-convert = book_convert.cli:main

[options.extras_require]
dev =
    pytest
